ft/src/tui/widgets/snapshots/ft__tui__widgets__picker__tests__picker_empty_50x10.snap
---
source: ft/src/tui/widgets/picker.rs
assertion_line: 551
expression: frame
---
┌ find ──────────────────────────────────────────┐
│type to search…                                 │
└────────────────────────────────────────────────┘
┌ results ───────────────────────────────────────┐
│                 type to search…                │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
