ft/src/tui/widgets/snapshots/ft__tui__widgets__picker__tests__picker_narrow_40x8.snap
---
source: ft/src/tui/widgets/picker.rs
assertion_line: 581
expression: frame
---
┌ find ────────────────────────────────┐
│a│                                    │
└──────────────────────────────────────┘
┌ results ─────────────────────────────┐
│▶ alpha                               │
│  beta                                │
│  gamma                               │
└──────────────────────────────────────┘
