ft/src/tui/widgets/snapshots/ft__tui__widgets__picker__tests__picker_no_match_50x10.snap
---
source: ft/src/tui/widgets/picker.rs
assertion_line: 571
expression: frame
---
┌ find ──────────────────────────────────────────┐
│zzzz│                                           │
└────────────────────────────────────────────────┘
┌ results ───────────────────────────────────────┐
│                   no matches                   │
│                                                │
│                                                │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
