ft/src/tui/widgets/snapshots/ft__tui__widgets__picker__tests__picker_populated_50x10.snap
---
source: ft/src/tui/widgets/picker.rs
assertion_line: 561
expression: frame
---
┌ find ──────────────────────────────────────────┐
│a│                                              │
└────────────────────────────────────────────────┘
┌ results ───────────────────────────────────────┐
│▶ alpha                                         │
│  beta                                          │
│  gamma                                         │
│                                                │
│                                                │
└────────────────────────────────────────────────┘
